tests/negative/typecheck/try_function_not_error.orng
// try_function_not_error.orng:11:8: error: enclosing function around try expression does not return an error
//     try f()
//       ^
// 
enum My_Error {
    ok(Int)
    err(Bool)
}

fn main() -> My_Error {
    try f()
    .ok(4)
}

fn f() -> Bool!Int {
    return .err(false)
}